# gimeltra

./: .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PLAN.md  README.md  TODO.md  _config.yml  build.sh  llms.txt  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  index.md  scripts.md  tsv-format.md
gimeltra/: __init__.py  __main__.py  gimeltra.numbers  gimeltra.py  gimeltra.tsv  gimeltra_data.json  update.py
tests/: test_gimeltra.py
transgimelit/: gimelit.py  gimelit.tsv
